--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Aqui definimos el titulo de la pagina web-->
     <title>Mi primera página web</title>
+    <!--Enlasar archivos css o js-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Etiquetas de texto-->
+    <h1>Aquí esta el titulo de la pagina</h1>
+    <h2>Aquí esta el subtitulo 2</h2>
+    <h3>Aquí esta el subtitulo 3</h3>
+    <h4>Aquí esta el subtitulo 4</h4>
+    <h5>Aquí esta el subtitulo 5</h5>
+    <h6>Aquí esta el subtitulo 6</h6>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> 
+    Sapiente aliquam magni alias aliquid error ut numquam. <br>
+    Veritatis quasi nobis fuga sequi quos facilis, eum ab deserunt aperiam excepturi earum quidem.
+
+    <!--Etiqueta de parrafo-->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+        Tempore eaque nihil placeat quis ipsum nemo praesentium quibusdam consequatur sed ab,<br>
+        repellat illo veritatis recusandae. <br>
+        Dignissimos accusantium quam quae iure illum.<br>
+    </p>
+
+    <hr>
+
+    <strong>Hoolas (Muy importante)</strong>
+
+    <hr>
+
+    <!--Etiquetas de enlace-->
+    <a href="https://youtu.be/xStCNGr20BY?si=FWuqlgFzqpGlt-yh" target="_blank">video</a>
 </body>
 </html>
