--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <hr>
 
     <!--Etiquetas de enlace-->
-    <a href="https://youtu.be/xStCNGr20BY?si=FWuqlgFzqpGlt-yh" target="_blank">video</a>
+    <a href="https://youtu.be/xStCNGr20BY?si=FWuqlgFzqpGlt-yh" target="_blank">video de YouTube</a>
 </body>
 </html>
