--- a/index.html
+++ b/index.html
@@ -38,6 +38,75 @@
     <hr>
 
     <!--Etiquetas de enlace-->
-    <a href="https://youtu.be/xStCNGr20BY?si=FWuqlgFzqpGlt-yh" target="_blank">video de YouTube</a>
+    <a href="https://youtu.be/xStCNGr20BY?si=FWuqlgFzqpGlt-yh" target="_blank" style="background-color: blueviolet;">video de YouTube</a><br>
+
+
+    <!--Etiquetas de imagen-->
+    <img src="img/HTLM 5 LOGO.webp" alt="logo de html 5" width="200px" height="200px" style="border-radius: 50%">
+
+    <br>
+
+    <a href="paginas/contactos.html">Ir a contactame</a>
+    <br>
+    <a href="paginas/otras/nosotros.html">Ir a nosotros</a>
+
+    <!--Etiquetas de lista-->
+    <br>
+    <h2>paises de latinoameriaca</h2>
+    <ul>
+        <li>Ecuador</li>
+        <li>Argentina</li>
+        <li>Perú</li>
+    </ul>
+    <br>
+    <h2>Listas ordenadas; tabla de posisiones</h2>
+    <ol type="a">
+        <li>Barcelona</li>
+        <li>Independiente</li>
+        <li>Guayaquil city</li>
+    </ol>
+    <!--Etiquetas de Tablas-->
+    <br>
+    <table border="1">
+        <thead>
+            <th>Numero</th>
+            <th>Pais</th>
+            <th>Poblacion</th>
+            <th colspan="3">Nombres</th>
+        </thead>
+        <tbody>
+            <tr>
+            <tdr rowspan="2">1</td>
+            <td>Ecuador</td>
+            <td>18 millones</td>
+            <td>Pablo</td>
+            <td>Aguilar</td>
+            <td>18</td>
+            </tr>
+
+            <tr>
+                <td>Ecuador</td>
+                <td>18 millones</td>
+                <td>Pablo</td>
+                <td>Aguilar</td>
+                <td>18</td>
+                </tr>
+        </tbody>
+    </table>
+
+    <!--contenedores-->
+    <section>
+        <div style="text-align: center;">
+            <h2>Formulario</h2>
+        </div>
+        <!--creando formulario-->
+        <div>
+            <form action="">
+                <label>Ingrese el nombre:</label>
+                <input type="text" name="" id="" placeholder="Ingrese su nombre" required >
+            </form>
+        </div>
+    </section>
+
 </body>
 </html>
